--- a/packages/pro-components/chat/chat-markdown/chat-markdown.less
+++ b/packages/pro-components/chat/chat-markdown/chat-markdown.less
@@ -114,8 +114,8 @@
   // 列表样式
   &-list {
     display: block;
-    padding-left: @spacer-1;
-    margin: @spacer-1 0;
+    padding: 0;
+    margin: 0 0 @spacer 1.5em;;
 
     // 有序列表
     &__decimal {
