--- a/packages/pro-components/chat/chat-sender/_example/chat-sender.less
+++ b/packages/pro-components/chat/chat-sender/_example/chat-sender.less
@@ -4,7 +4,7 @@
 
 @media (prefers-color-scheme: dark) {
   .chat-sender-placeholder {
-    --demo-chat-sender-placeholder: #fff;
+    --demo-chat-sender-placeholder: rgba(255, 255, 255, .1);
   }
 }
 
